Fixed posttype filter options flexwrap

--- a/static/sass/_main-files/_base/page/_tablenav.sass
+++ b/static/sass/_main-files/_base/page/_tablenav.sass
@@ -1,6 +1,7 @@
 .tablenav
 	width: 100% !important
 	display: flex !important
+	flex-wrap: wrap !important
 	align-items: center !important
 	gap: 1rem !important
 	margin: 1rem 0 !important
@@ -13,6 +14,7 @@
 	.actions
 		padding: unset !important
 		display: flex !important
+		flex-wrap: wrap !important
 		align-items: center !important
 		gap: 1rem !important
 
